Affichage avec ApiManager OK.

--- a/view/test-m/list/aff.phtml
+++ b/view/test-m/list/aff.phtml
@@ -1,3 +1,4 @@
 <!-- Chemin de ce fichier :
 /view/{namespace}/{controller}/{action}.phtml -->
 <h1>Blog\ListController::indexAction()</h1>
+<?php echo $content; ?>
