Traitement 20 par 20, nettoyage régulier Le formulaire permet de plus de choisir à partir de quelle ligne commencer et jusqu’à quelle ligne aller.

--- a/view/aline-importer/import/import.phtml
+++ b/view/aline-importer/import/import.phtml
@@ -9,6 +9,8 @@ if(isset($form)) {
 
 	echo $this->form()->openTag($form);
 	echo $this->formRow($form->get('table'));
+	echo $this->formRow($form->get('startOffset'));
+	echo $this->formRow($form->get('endOffset'));
 	echo $this->formSubmit($form->get('submit'));
 	echo $this->form()->closeTag();
 }
